--- a/webapp/view/History.view.xml
+++ b/webapp/view/History.view.xml
@@ -2,13 +2,13 @@
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
     xmlns:semantic="sap.m.semantic">
-    <semantic:FullscreenPage navButtonPress="onNavBack" showNavButton="true" id="historyPage" showSubHeader="true" showFooter="false" floatingFooter="false" title="{i18n>history}">
+    <semantic:FullscreenPage navButtonPress="onNavBack" showNavButton="true" id="historyPage" showSubHeader="true" showFooter="true" floatingFooter="false" title="{i18n>myrequest}">
         <semantic:content>
             <VBox class="sapUiSmallMarginBeginEnd sapUiMediumMarginTop">
-                <Table inset="false" alternateRowColors="true">
+                <Table id="historyTable" inset="false" alternateRowColors="true" items="{historyModel>/items}">
                     <headerToolbar>
                         <OverflowToolbar>
-                            <Title text="Employee"></Title>
+                            <Title text="{i18n>employee}"></Title>
                             <ToolbarSpacer/>
                             <Button text="Submit" type="Accept" press="onSubmitPress" width="8rem" enabled="{appParams>/IsEditable}" visible="false"/>
                             <Button tooltip="View Sort Settings" icon="sap-icon://sort" press="handleSortButtonPressed" visible="{listSetting>/isAll}"/>
@@ -19,68 +19,47 @@
                     </headerToolbar>   
                     <columns>
                         <Column width="3.5rem">
-                            <Text text="Employee Photo" visible="false"/>
+                            <Text text="{i18n>employeePhoto}" visible="false"/>
+                        </Column>
+                        <Column width="15rem" minScreenWidth="Tablet" demandPopin="true">
+					        <Text text="{i18n>employee}"/>
+                        </Column>
+                        <Column width="12rem" minScreenWidth="Tablet" demandPopin="true">
+                            <Text text="{i18n>actionReason}"/>
                         </Column>
                         <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
-					        <Text text="Employee"/>
-                        </Column>
-                        <Column width="13rem" minScreenWidth="Tablet" demandPopin="true">
-                            <Text text="Action Type and Reason for Action"/>
-                        </Column>
-                        <Column width="6rem" minScreenWidth="Tablet" demandPopin="true">
-                            <Text text="Date Action"/>
-                        </Column>
-                        <Column width="6rem" minScreenWidth="Tablet" demandPopin="true">
-                            <Text text="Date Request"/>
-                        </Column>
-                        <Column width="6rem" minScreenWidth="Tablet" demandPopin="true">
-                            <Text text="Status"/>
+                            <Text text="{i18n>dateAction}"/>
                         </Column>
                         <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
-                            <Text text="Person Responsible"/>
+                            <Text text="{i18n>dateReq}"/>
+                        </Column>
+                        <Column width="5rem" minScreenWidth="Tablet" demandPopin="true">
+                            <Text text="{i18n>status}"/>
+                        </Column>
+                        <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
+                            <Text text="{i18n>personResponsible}"/>
                         </Column>
                     </columns>
                     <items>
                         <ColumnListItem vAlign="Middle" type="Navigation" press="onEmployeePressed">
                             <cells>
-                                <Avatar src="{path: 'talentList>EmployeeNumber', formatter: '.formatter.formatEmployeePhotoUrl'}" displaySize="Custom"
-                                    initials="{path: 'talentList>EmployeeName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
-                                    tooltip="{talentList>EmployeeName}" class="sapMTableContentMargin"/>
+                                <Avatar displaySize="Custom"
+                                    initials="{path: 'historyModel>EmployeeName/FormattedName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
+                                    tooltip="{historyModel>EmployeeName/FormattedName}" class="sapMTableContentMargin"/>
                                 <VBox>
-                                    <Text text="Adit Surya Kencana (01003358)" />
-                                    <Text text="Project Expansion and CPP Mntc Div Head" />
+                                    <ObjectIdentifier title="{historyModel>EmployeeName/FormattedName} ({historyModel>EmployeeNumber})" />
+                                    <Text text="{historyModel>PlansDesc_Dest}" />
                                 </VBox>
                                 <VBox class="sapMTableContentMargin">
-                                    <Text text="SP - I" />
-                                    <Text text="31/12/2020 - 31/12/2022" />
-                                    <Text text="Inctive" />
+                                    <Text text="{historyModel>ActionType} {historyModel>ActionTypeDesc}" />
+                                    <Text text="{historyModel>Massg} {historyModel>MassgDesc}" />
                                 </VBox>
-                                <Text text="31/12/2024" />
-                                <Text text="31/12/2024" />
-                                <Text text="Posted" class="sapMTableContentMargin greenText" />
-                                <Text text="" class="sapMTableContentMargin" />
+                                <Text text="{path: 'historyModel>ZbegdaEfktf', formatter: '.formatter.formatDateDisplay'}" />
+                                <Text text="{path: 'historyModel>CreatedOn', formatter: '.formatter.formatDateDisplay'}" />
+                                <ObjectStatus text="{historyModel>StatusText}" state="{path:'historyModel>Status', formatter:'.formatter.formatStatus'}" class="sapMTableContentMargin"/>
+                                <Text text="{historyModel>ApproverName}" class="sapMTableContentMargin" />
                             </cells>
                         </ColumnListItem>
-                        <ColumnListItem vAlign="Middle" type="Navigation" press="onEmployeePressed">
-                        <cells>
-                                <Avatar src="{path: 'talentList>EmployeeNumber', formatter: '.formatter.formatEmployeePhotoUrl'}" displaySize="Custom"
-                                    initials="{path: 'talentList>EmployeeName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
-                                    tooltip="{talentList>EmployeeName}" class="sapMTableContentMargin"/>
-                                <VBox>
-                                    <Text text="Setya Nov (00100122)" />
-                                    <Text text="Employee Engagement Department Head" />
-                                </VBox>
-                                <VBox class="sapMTableContentMargin">
-                                    <Text text="SP - I" />
-                                    <Text text="31/12/2020 - 31/12/2022" />
-                                    <Text text="Inctive" />
-                                </VBox>
-                                <Text text="31/12/2024" />
-                                <Text text="31/12/2024" />
-                                <Text text="Submitted" class="sapMTableContentMargin orangeText" />
-                                <Text text="Apriyani Rahayu (HRBP) (11000096)" class="sapMTableContentMargin" />
-                            </cells>
-                        </ColumnListItem>   
                     </items>
                 </Table>
             </VBox>
