--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -10,7 +10,7 @@
                 <FlexBox alignItems="Center" justifyContent="Center" width="100%" class="sapUiSmallMarginTop">
                     <layout:HorizontalLayout>
                         <FlexBox direction="Column" class="sapUiSmallMarginEnd" >
-                            <Label text="Year:"/>
+                            <Label text="{i18n>year}"/>
                             <DatePicker
                                 id="yearSelectOverview"
                                 width="200px"
@@ -22,7 +22,7 @@
                         </FlexBox>
                         
                         <FlexBox direction="Column" class="sapUiSmallMarginBegin sapUiSmallMarginEnd">
-                            <Label text="Employee Name/NIK:"/>
+                            <Label text="{i18n>searchTitle}"/>
                             <SearchField
                                 id="searchFieldOverview"
                                 width="300px"
@@ -31,13 +31,13 @@
                         <VBox class="sapUiSmallMarginEnd">
                             <Label />
                             <HBox >
-                            <Button text="Hide Filter Bar" 
+                            <Button text="{i18n>hideFilter}" 
                                 press=".onToggleFilterBar"
                                 class="sapUiSmallMarginBegin"/>
-                            <Button text="Filters"
+                            <Button text="{i18n>filter}"
                                     press=".onShowFilters"
                                     class="sapUiSmallMarginBegin"/>
-                            <Button text="Go"
+                            <Button text="{i18n>go}"
                                 type="Emphasized"
                                 press=".onSearch"
                                 class="sapUiSmallMarginBegin"/>
@@ -51,20 +51,23 @@
                 justifyContent="Center"
                 class="sapUiMediumMarginTop">
                 <items>
-                    <GenericTile header="Action Request" class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" press="onActReqPressed">
+                    <GenericTile header="Create Request" class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" press="onActReqPressed">
                         <TileContent>
-                            <NumericContent value="22" icon="sap-icon://employee" withMargin="true"/>
+                            <NumericContent value="{path: 'appParam>/employeeCount', formatter: '.formatter.paramCountFormatter'}" icon="sap-icon://employee" withMargin="true"/>
                         </TileContent>
                     </GenericTile>
                     <GenericTile header="Approval" class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" press="onAppPressed">
                         <TileContent>
-                            <NumericContent value="1" icon="sap-icon://employee-approvals" withMargin="true"/>
+                            <NumericContent value="{path: 'appParam>/requestCount', formatter: '.formatter.paramCountFormatter'}" icon="sap-icon://employee-approvals" withMargin="true"/>
+                        </TileContent>
+                    </GenericTile>
+                    <GenericTile header="My Request" class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" press="onHistoryPressed">
+                        <TileContent>
+                            <NumericContent value="{path: 'appParam>/requestCount', formatter: '.formatter.paramCountFormatter'}" icon="sap-icon://customer-history" withMargin="true"/>
                         </TileContent>
                     </GenericTile>
                 </items>
             </FlexBox>
         </semantic:content>
-        <!-- <semantic:mainAction>
-        </semantic:mainAction> -->
     </semantic:FullscreenPage>
 </mvc:View>
