--- a/webapp/view/History.view.xml
+++ b/webapp/view/History.view.xml
@@ -1,6 +1,7 @@
 <mvc:View controllerName="bsim.hcmapp.man.movement.controller.History"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m"
+    xmlns:core="sap.ui.core"
     xmlns:semantic="sap.m.semantic">
     <semantic:FullscreenPage navButtonPress="onNavBack" showNavButton="true" id="historyPage" showSubHeader="true" showFooter="true" floatingFooter="false" title="{i18n>myrequest}">
         <semantic:content>
@@ -10,7 +11,14 @@
                         <OverflowToolbar>
                             <Title text="{i18n>employee}"></Title>
                             <ToolbarSpacer/>
-                            <Button text="Submit" type="Accept" press="onSubmitPress" width="8rem" enabled="{appParams>/IsEditable}" visible="false"/>
+                            <!-- <Button text="Submit" type="Accept" press="onSubmitPress" width="8rem" enabled="{appParams>/IsEditable}" visible="true"/> -->
+                            <!-- Add after the SearchField or wherever you prefer -->
+                            <Button
+                                icon="sap-icon://excel-attachment"
+                                tooltip="Export to Excel"
+                                press="onExportTable"
+                                visible="{listSetting>/isAll}"
+                            />
                             <Button tooltip="View Sort Settings" icon="sap-icon://sort" press="handleSortButtonPressed" visible="{listSetting>/isAll}"/>
                             <Button tooltip="View Filter Settings" icon="sap-icon://filter" press="handleFilterButtonPressed" visible="{listSetting>/isAll}"/>
                             <Button tooltip="View Group Settings" icon="sap-icon://group-2" press="handleGroupButtonPressed" visible="{listSetting>/isAll}"/>
@@ -18,7 +26,7 @@
                         </OverflowToolbar>
                     </headerToolbar>   
                     <columns>
-                        <Column width="3.5rem">
+                        <Column width="4rem">
                             <Text text="{i18n>employeePhoto}" visible="false"/>
                         </Column>
                         <Column width="15rem" minScreenWidth="Tablet" demandPopin="true">
@@ -27,28 +35,39 @@
                         <Column width="12rem" minScreenWidth="Tablet" demandPopin="true">
                             <Text text="{i18n>actionReason}"/>
                         </Column>
-                        <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
+                        <Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
                             <Text text="{i18n>dateAction}"/>
                         </Column>
-                        <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
+                        <Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
                             <Text text="{i18n>dateReq}"/>
                         </Column>
                         <Column width="5rem" minScreenWidth="Tablet" demandPopin="true">
                             <Text text="{i18n>status}"/>
                         </Column>
-                        <Column width="7rem" minScreenWidth="Tablet" demandPopin="true">
+                        <Column width="8rem" minScreenWidth="Tablet" demandPopin="true">
                             <Text text="{i18n>personResponsible}"/>
+                        </Column>
+                        <Column width="3rem" minScreenWidth="Tablet" demandPopin="true">
+                            <Text text="PDF" visible="false"/>
                         </Column>
                     </columns>
                     <items>
                         <ColumnListItem vAlign="Middle" type="Navigation" press="onEmployeePressed">
                             <cells>
                                 <Avatar displaySize="Custom"
-                                    initials="{path: 'historyModel>EmployeeName/FormattedName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
-                                    tooltip="{historyModel>EmployeeName/FormattedName}" class="sapMTableContentMargin"/>
+                                    initials="{path: 'historyModel>EmployeeName', formatter: '.formatter.getEmployeeInitial'}" backgroundColor="Random" customDisplaySize="2.6rem"
+                                    tooltip="{historyModel>EmployeeName}" class="sapMTableContentMargin"/>
                                 <VBox>
-                                    <ObjectIdentifier title="{historyModel>EmployeeName/FormattedName} ({historyModel>EmployeeNumber})" />
-                                    <Text text="{historyModel>PlansDesc_Dest}" />
+                                    <ObjectIdentifier title="{historyModel>EmployeeName} ({historyModel>EmployeeNumber})" />
+                                    <Text
+                                        text="{
+                                            parts: [
+                                                {path: 'historyModel>ActionType'},
+                                                {path: 'historyModel>PlansDesc_Dest'},
+                                                {path: 'historyModel>PositionName'}
+                                            ],
+                                            formatter: '.formatter.displayPositionOrPlans'}"
+                                    />
                                 </VBox>
                                 <VBox class="sapMTableContentMargin">
                                     <Text text="{historyModel>ActionType} {historyModel>ActionTypeDesc}" />
@@ -56,8 +75,14 @@
                                 </VBox>
                                 <Text text="{path: 'historyModel>ZbegdaEfktf', formatter: '.formatter.formatDateDisplay'}" />
                                 <Text text="{path: 'historyModel>CreatedOn', formatter: '.formatter.formatDateDisplay'}" />
-                                <ObjectStatus text="{historyModel>StatusText}" state="{path:'historyModel>Status', formatter:'.formatter.formatStatus'}" class="sapMTableContentMargin"/>
-                                <Text text="{historyModel>ApproverName}" class="sapMTableContentMargin" />
+                                <ObjectStatus text="{historyModel>StatusText}" state="{path:'historyModel>StatusText', formatter:'.formatter.formatStatus'}" class="sapMTableContentMargin"/>
+                                <Text text="{historyModel>ApproverName} ({historyModel>ApproverId})" class="sapMTableContentMargin" />
+                                <Button
+                                    icon="sap-icon://pdf-attachment"
+                                    press="onPdfIconPressed"
+                                    visible="{= !!${historyModel>NoSK} }"
+                                    tooltip="View PDF"
+                                />
                             </cells>
                         </ColumnListItem>
                     </items>
