--- a/webapp/view/OrgChart.view.xml
+++ b/webapp/view/OrgChart.view.xml
@@ -25,8 +25,8 @@
                 <nodes>
                     <Node
                         key="{key}"
-                        title="{key}"
-                        description="{title}"
+                        width="90"
+                        description="{title} {key}"
                         attributes="{
                             path: 'attributes',
                             templateShareable: false
